Add 58K+ learning images (handwritten, diagram, sticky note) across all 53 courses
Generated 3 SVG images per topic (handwritten notebook, concept diagram, sticky note)
for 21,381 topics across 753 chapters. Images are clickable with target=_blank.

Image types:
- Handwritten: Caveat cursive on notebook paper with blue guide lines
- Diagram: Mind-map with colored sub-nodes connected by arrows
- Sticky note: Yellow note with push-pin, checkmark bullets, key insight footer

Generator: scripts/generate-learning-images/ (auto-detects structural family)